--- a/vela-templates/addons/observability-asset/definitions/trait-import-grafana-dashboard.yaml
+++ b/vela-templates/addons/observability-asset/definitions/trait-import-grafana-dashboard.yaml
@@ -19,15 +19,13 @@ spec:
         			credentialSecret:          parameter.credentialSecret
         			credentialSecretNamespace: parameter.credentialSecretNamespace
         		}
-        		url: parameter.url
+        		urls: parameter.urls
         	}
         }
-
         parameter: {
         	grafanaServiceName:        string
         	grafanaServiceNamespace:   *"default" | string
         	credentialSecret:          string
         	credentialSecretNamespace: *"default" | string
-        	url:                       string
+        	urls: [...string]
         }
-        
