--- a/charts/vela-core/templates/addons/observability-asset.yaml
+++ b/charts/vela-core/templates/addons/observability-asset.yaml
@@ -36,10 +36,10 @@ data:
                       \                  parameter.grafanaServiceName\n\t\t\tnamespace:
                       \                parameter.grafanaServiceNamespace\n\t\t\tcredentialSecret:
                       \         parameter.credentialSecret\n\t\t\tcredentialSecretNamespace:
-                      parameter.credentialSecretNamespace\n\t\t}\n\t\turl: parameter.url\n\t}\n}\n\nparameter:
+                      parameter.credentialSecretNamespace\n\t\t}\n\t\turls: parameter.urls\n\t}\n}\nparameter:
                       {\n\tgrafanaServiceName:        string\n\tgrafanaServiceNamespace:
                       \  *\"default\" | string\n\tcredentialSecret:          string\n\tcredentialSecretNamespace:
-                      *\"default\" | string\n\turl:                       string\n}\n"
+                      *\"default\" | string\n\turls: [...string]\n} \n"
             type: raw
           - name: pure-ingress
             properties:
