--- a/vela-templates/addons/observability/template.yaml
+++ b/vela-templates/addons/observability/template.yaml
@@ -50,7 +50,7 @@ spec:
                 grafanaServiceNamespace: observability
                 credentialSecret: grafana
                 credentialSecretNamespace: observability
-                urls: [ "https://raw.githubusercontent.com/zzxwill/grafana-dashboards/master/Kubernetes_for_Prometheus_Dashboard_CN_20201209_1628671317889.json" ]
+                urls: [ "https://raw.githubusercontent.com/zzxwill/grafana-dashboards/master/kubevela_core_logging.json","https://raw.githubusercontent.com/zzxwill/grafana-dashboards/master/kubevela_core_monitoring.json" ]
         - name: loki
           type: helm
           properties:
