--- a/vela-templates/addons/observability/template.yaml
+++ b/vela-templates/addons/observability/template.yaml
@@ -85,13 +85,12 @@ spec:
               alertmanager:
                 persistentVolume:
                   enabled: '[[ index .Args "alertmanager-pvc-enabled" | default "true" ]]'
-
                   storageClass: '[[ index .Args "alertmanager-pvc-class" ]]'
                   size: '[[ index .Args "alertmanager-pvc-size" | default "20Gi" ]]'
               server:
                 persistentVolume:
                   enabled: '[[ index .Args "server-pvc-enabled" | default "true" ]]'
-                  storageClass: '[[ index .Args "server-pvc-size" ]]'
+                  storageClass: '[[ index .Args "server-pvc-class" ]]'
                   size: '[[ index .Args "server-pvc-size" | default "20Gi" ]]'
           traits:
             - type: register-grafana-datasource # register Prometheus datasource to Grafana
