--- a/charts/vela-core/crds/core.oam.dev_envbindings.yaml
+++ b/charts/vela-core/crds/core.oam.dev_envbindings.yaml
@@ -118,13 +118,12 @@ spec:
                       - components
                       type: object
                     placement:
-                      description: ClusterPlacement defines the cluster placement
-                        rules for an app revision.
+                      description: EnvPlacement defines the placement rules for an
+                        app.
                       properties:
                         clusterSelector:
-                          description: ClusterSelector selects the cluster to  deploy
-                            apps to. If not specified, it indicates the host cluster
-                            per se.
+                          description: ClusterSelector defines the rules to select
+                            a Cluster resource. Either name or labels is needed.
                           properties:
                             labels:
                               additionalProperties:
@@ -136,13 +135,19 @@ spec:
                               description: Name is the name of the cluster.
                               type: string
                           type: object
-                        distribution:
-                          description: Distribution defines the replica distribution
-                            of an AppRevision to a cluster.
+                        namespaceSelector:
+                          description: NamespaceSelector defines the rules to select
+                            a Namespace resource. Either name or labels is needed.
                           properties:
-                            replicas:
-                              description: Replicas is the replica number.
-                              type: integer
+                            labels:
+                              additionalProperties:
+                                type: string
+                              description: Labels defines the label selector to select
+                                the namespace.
+                              type: object
+                            name:
+                              description: Name is the name of the namespace.
+                              type: string
                           type: object
                       type: object
                   required:
@@ -176,13 +181,14 @@ spec:
                   description: ClusterDecision recorded the mapping of environment
                     and cluster
                   properties:
-                    cluster_name:
+                    cluster:
                       type: string
-                    env_name:
+                    env:
+                      type: string
+                    namespace:
                       type: string
                   required:
-                  - cluster_name
-                  - env_name
+                  - env
                   type: object
                 type: array
               conditions:
