--- a/vela-templates/addons/observability/template.yaml
+++ b/vela-templates/addons/observability/template.yaml
@@ -24,7 +24,7 @@ spec:
           type: helm
           properties:
             repoType: git
-            repoUrl: https://github.com/zzxwill/grafana-datasource-registration
+            repoUrl: https://github.com/oam-dev/grafana-registration
             branch: master
             chart: ./chart
             values:
@@ -50,7 +50,9 @@ spec:
                 grafanaServiceNamespace: observability
                 credentialSecret: grafana
                 credentialSecretNamespace: observability
-                urls: [ "https://raw.githubusercontent.com/zzxwill/grafana-dashboards/master/kubevela_core_logging.json","https://raw.githubusercontent.com/zzxwill/grafana-dashboards/master/kubevela_core_monitoring.json" ]
+                urls:
+                  - https://raw.githubusercontent.com/oam-dev/grafana-registration/master/dashboards/kubevela_core_logging.json
+                  - https://raw.githubusercontent.com/oam-dev/grafana-registration/master/dashboards/kubevela_core_monitoring.json
         - name: loki
           type: helm
           properties:
