--- a/charts/vela-core/templates/defwithtemplate/env-binding.yaml
+++ b/charts/vela-core/templates/defwithtemplate/env-binding.yaml
@@ -57,7 +57,7 @@ spec:
         	}
         }
         parameter: {
-        	engine: *"local" | string
+        	engine: *"ocm" | string
         	envs: [...#Env]
         	created: *true | bool
         }
