--- a/docs/examples/workflow-with-ocm/app.yaml
+++ b/docs/examples/workflow-with-ocm/app.yaml
@@ -15,6 +15,8 @@ spec:
     - name: patch
       type: env-binding
       properties:
+        engine: ocm
+        created: false
         envs:
           - name: prod
             patch:
