--- a/vela-templates/addons/auto-gen/observability.yaml
+++ b/vela-templates/addons/auto-gen/observability.yaml
@@ -29,7 +29,7 @@ spec:
           version: 6.14.1
         traits:
         - properties:
-            domain: '[[ index .Args "ingress-domain" ]]'
+            domain: '[[ index .Args "grafana-domain" ]]'
             http:
               /: 80
           type: pure-ingress
