--- a/vela-templates/addons/observability-asset/template.yaml
+++ b/vela-templates/addons/observability-asset/template.yaml
@@ -2,8 +2,8 @@ apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
   annotations:
-    addons.oam.dev/description: "ocm-cluster-manager can deploy an OCM hub cluster environment."
-  name: ocm-cluster-manager
+    addons.oam.dev/description: "Preparations that observability need"
+  name: observability-asset
   namespace: vela-system
 spec:
   appTemplate:
