--- a/vela-templates/addons/auto-gen/fluxcd.yaml
+++ b/vela-templates/addons/auto-gen/fluxcd.yaml
@@ -5961,7 +5961,7 @@ spec:
                   to master branch\n\tbranch: *\"master\" | string\n\t// +usage=The
                   name of the secret containing authentication credentials for Helm
                   repository or bucket\n\tsecretRef?: string\n\t// +usage=The namespace
-                  for helm chart\n\ttargetNamespace?: string\n\t// +usage=Chart version\n\tvalue?:
+                  for helm chart\n\ttargetNamespace?: string\n\t// +usage=Chart value\n\tvalue?:
                   #nestedmap\n    // +usage=The release name\n    releaseName?: string\n}\n\n#nestedmap:
                   {\n\t...\n} \n"
             workload:
