--- a/charts/vela-core/templates/defwithtemplate/multi-env.yaml
+++ b/charts/vela-core/templates/defwithtemplate/multi-env.yaml
@@ -17,7 +17,7 @@ spec:
 
         component: op.#ApplyEnvBindComponent & {
         	env:       parameter.env
-        	policy:    context.name + "-" + parameter.policy
+        	policy:    parameter.policy
         	component: parameter.component
         	// context.namespace indicates the namespace of the app
         	namespace: context.namespace
