Store OSS bucket and endpoint to Github Action secret
Storing OSS bucket and endpoint to Github Action secret will help
a developer to test the function without needing to changing code,
revert code. Instead, he/she just need to configure the secret contect

--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -8,8 +8,8 @@ on:
   workflow_dispatch: {}
 
 env:
-  BUCKET: kubevelacharts
-  ENDPOINT: oss-cn-hangzhou.aliyuncs.com
+  BUCKET: ${{ secrets.OSS_BUCKET }}
+  ENDPOINT: ${{ secrets.OSS_ENDPOINT }}
   ACCESS_KEY: ${{ secrets.OSS_ACCESS_KEY }}
   ACCESS_KEY_SECRET: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
   ARTIFACT_HUB_REPOSITORY_ID: ${{ secrets.ARTIFACT_HUB_REPOSITORY_ID }}
