Replace gcr.io image in chart kube-metrics-server
As it's difficult to pull gcr.io iamge, so replace the image
k8s.gcr.io/kube-state-metrics/kube-state-metrics:v2.1.0 to the one
hosted in dockerhub.io

--- a/vela-templates/addons/auto-gen/observability.yaml
+++ b/vela-templates/addons/auto-gen/observability.yaml
@@ -103,6 +103,10 @@ spec:
           repoType: helm
           repoUrl: https://prometheus-community.github.io/helm-charts
           targetNamespace: observability
+          values:
+            image:
+              repository: oamdev/kube-state-metrics
+              tag: v2.1.0
           version: 3.4.1
         type: helm
     status:
