--- a/charts/vela-core/templates/addons/observability.yaml
+++ b/charts/vela-core/templates/addons/observability.yaml
@@ -106,6 +106,10 @@ data:
               repoType: helm
               repoUrl: https://prometheus-community.github.io/helm-charts
               targetNamespace: observability
+              values:
+                image:
+                  repository: oamdev/kube-state-metrics
+                  tag: v2.1.0
               version: 3.4.1
             type: helm
         status:
