add clean up step

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -172,3 +172,7 @@ jobs:
 
       - name: Run compress binary
         run: make compress
+              
+      - name: Cleanup image
+        if: ${{ always() }}
+        run: make image-cleanup
