--- a/charts/vela-core/templates/addons/fluxcd.yaml
+++ b/charts/vela-core/templates/addons/fluxcd.yaml
@@ -5949,24 +5949,24 @@ data:
                       URL, accept HTTP/S or SSH address as git url\n\trepoUrl: string\n\t//
                       +usage=The interval at which to check for repository/bucket and
                       relese updates\n\tpullInterval: *\"5m\" | string\n\t// +usage=The
-                      bucket's name, required if repoType is bucket\n\tbucketName?: string\n\t//
+                      bucket's name, required if repoType is oss\n\tbucketName?: string\n\t//
                       +usage=\"generic\" for Minio, Amazon S3, Google Cloud Storage, Alibaba
                       Cloud OSS, \"aws\" for retrieve credentials from the EC2 service
                       when credentials not specified, default \"generic\"\n\tprovider:
                       *\"generic\" | \"aws\"\n\t// +usage=Bucket endpoint address, required
-                      if repoType is bucket\n\tendpoint?: string\n\t// +usage=The bucket
+                      if repoType is oss\n\tendpoint?: string\n\t// +usage=The bucket
                       region, optional\n\tregion?: string\n\t// +usage=The timeout for
                       download operations\n\ttimeout?: string\n\t// +usage=1.The relative
-                      path to helm chart for git/bucket source. 2. chart name for helm
-                      resource 3. relative path for chart package(e.g. ./charts/podinfo-1.2.3.tgz)\n\tchart:
+                      path to helm chart for git/oss source. 2. chart name for helm resource
+                      3. relative path for chart package(e.g. ./charts/podinfo-1.2.3.tgz)\n\tchart:
                       string\n\t// +usage=Chart version\n\tversion: *\"*\" | string\n\t//
                       +usage=The Git reference to checkout and monitor for changes, defaults
                       to master branch\n\tbranch: *\"master\" | string\n\t// +usage=The
                       name of the secret containing authentication credentials for Helm
-                      repository or bucket\n\tsecretRef?: string\n\t// +usage=The namespace
-                      for helm chart\n\ttargetNamespace?: string\n\t// +usage=Chart value\n\tvalue?:
-                      #nestedmap\n    // +usage=The release name\n    releaseName?: string\n}\n\n#nestedmap:
-                      {\n\t...\n} \n"
+                      repository or oss bucket\n\tsecretRef?: string\n\t// +usage=The
+                      namespace for helm chart\n\ttargetNamespace?: string\n\t// +usage=Chart
+                      value\n\tvalue?: #nestedmap\n    // +usage=The release name\n    releaseName?:
+                      string\n}\n\n#nestedmap: {\n\t...\n} \n"
                 workload:
                   type: autodetects.core.oam.dev
             type: raw
